tz-local/resource/kubesphere/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-harbor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth-harbor
#    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  rules:
#  - host: harbor.eks_domain
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: harbor
#          servicePort: 8500
#  - host: harbor.eks_domain
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: harbor-ui
#          servicePort: 80
  - host: harbor.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: harbor-ddrs6b-harbor-portal-8455c4bd7d-mw68m
              port:
                number: 8080
  - host: notary.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: harbor-qeqgz3-harbor-notary-server
              port:
                number: 4443
  tls:
    - hosts:
        - harbor.default.eks_project.eks_domain
        - notary.default.eks_project.eks_domain
      secretName: ingress-harbor-tls
